--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "pretty-quick": "pretty-quick"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
