--- a/package.json
+++ b/package.json
@@ -14,14 +14,6 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "husky": "^5.0.9",
-    "nodemon": "^2.0.6",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+    "nodemon": "^2.0.6"
   }
 }
